--- a/src/Module 10/Best Practices & Industry Case Studies/QUes_5.ipynb
+++ b/src/Module 10/Best Practices & Industry Case Studies/QUes_5.ipynb
@@ -91,90 +91,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "DataContextError",
-     "evalue": "Datasource is not a FluentDatasource",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDataContextError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Step 3: Define a data source name and add it to the context\u001b[39;00m\n\u001b[1;32m     18\u001b[0m datasource_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpandas_datasource\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 19\u001b[0m \u001b[43mcontext\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_datasource\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[43m    \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdatasource_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m    \u001b[49m\u001b[43mclass_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDatasource\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexecution_engine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclass_name\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPandasExecutionEngine\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata_connectors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdefault_runtime_data_connector_name\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclass_name\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mRuntimeDataConnector\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbatch_identifiers\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdefault_identifier_name\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     27\u001b[0m \u001b[43m        \u001b[49m\u001b[43m}\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Step 4: Create Expectation Suite\u001b[39;00m\n\u001b[1;32m     32\u001b[0m suite_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompleteness_suite\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/great_expectations/data_context/data_context/abstract_data_context.py:718\u001b[0m, in \u001b[0;36mAbstractDataContext.add_datasource\u001b[0;34m(self, name, initialize, datasource, **kwargs)\u001b[0m\n\u001b[1;32m    691\u001b[0m \u001b[38;5;129m@new_argument\u001b[39m(\n\u001b[1;32m    692\u001b[0m     argument_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatasource\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    693\u001b[0m     version\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.15.49\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    701\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[1;32m    702\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m FluentDatasource \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    703\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Add a new Datasource to the data context, with configuration provided as kwargs.\u001b[39;00m\n\u001b[1;32m    704\u001b[0m \n\u001b[1;32m    705\u001b[0m \u001b[38;5;124;03m    --Documentation--\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    716\u001b[0m \u001b[38;5;124;03m        Datasource instance added.\u001b[39;00m\n\u001b[1;32m    717\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 718\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_add_datasource\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    719\u001b[0m \u001b[43m        \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    720\u001b[0m \u001b[43m        \u001b[49m\u001b[43minitialize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minitialize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    721\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdatasource\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdatasource\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    722\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    723\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/great_expectations/data_context/data_context/abstract_data_context.py:758\u001b[0m, in \u001b[0;36mAbstractDataContext._add_datasource\u001b[0;34m(self, name, initialize, datasource, **kwargs)\u001b[0m\n\u001b[1;32m    754\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_add_fluent_datasource(\n\u001b[1;32m    755\u001b[0m         datasource\u001b[38;5;241m=\u001b[39mdatasource,\n\u001b[1;32m    756\u001b[0m     )\n\u001b[1;32m    757\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 758\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m DataContextError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatasource is not a FluentDatasource\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# noqa: TRY003 # FIXME CoP\u001b[39;00m\n\u001b[1;32m    759\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m datasource\n",
-      "\u001b[0;31mDataContextError\u001b[0m: Datasource is not a FluentDatasource"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error adding datasource: Datasource is not a FluentDatasource\n",
+      "Error creating expectation suite: 'EphemeralDataContext' object has no attribute 'add_or_update_expectation_suite'\n",
+      "Failed to create expectation suite.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import great_expectations as ge\n",
-    "from great_expectations.core.batch import BatchRequest\n",
     "from great_expectations.data_context import get_context\n",
+    "from great_expectations.core.batch import BatchRequest\n",
+    "from great_expectations.exceptions import GreatExpectationsError\n",
     "\n",
-    "# Step 1: Create sample data (simulated dataset with some missing values)\n",
-    "df = pd.DataFrame({\n",
-    "    \"patient_id\": [1, 2, 3, 4, 5],\n",
-    "    \"age\": [25, 38, None, 45, 60],\n",
-    "    \"cholesterol\": [180, 190, 210, None, 230],\n",
-    "    \"diagnosis\": [\"diabetes\", \"none\", \"hypertension\", \"diabetes\", None]\n",
-    "})\n",
+    "def load_sample_data():\n",
+    "    \"\"\"Simulate loading healthcare data with potential issues.\"\"\"\n",
+    "    return pd.DataFrame({\n",
+    "        \"patient_id\": [1, 2, 3, 4, 5],\n",
+    "        \"age\": [25, 38, None, 45, 60],\n",
+    "        \"cholesterol\": [180, 190, 210, None, 230],\n",
+    "        \"diagnosis\": [\"diabetes\", \"none\", \"hypertension\", \"diabetes\", None]\n",
+    "    })\n",
     "\n",
-    "# Step 2: Set up an in-memory data context (no filesystem use)\n",
-    "context = get_context()\n",
+    "def setup_context():\n",
+    "    \"\"\"Initialize in-memory Great Expectations context.\"\"\"\n",
+    "    try:\n",
+    "        context = get_context()\n",
+    "        return context\n",
+    "    except GreatExpectationsError as e:\n",
+    "        print(f\"Error initializing context: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Step 3: Define a data source name and add it to the context\n",
-    "datasource_name = \"pandas_datasource\"\n",
-    "context.add_datasource(\n",
-    "    name=datasource_name,\n",
-    "    class_name=\"Datasource\",\n",
-    "    execution_engine={\"class_name\": \"PandasExecutionEngine\"},\n",
-    "    data_connectors={\n",
-    "        \"default_runtime_data_connector_name\": {\n",
-    "            \"class_name\": \"RuntimeDataConnector\",\n",
-    "            \"batch_identifiers\": [\"default_identifier_name\"],\n",
-    "        }\n",
-    "    },\n",
-    ")\n",
+    "def add_datasource(context, datasource_name=\"pandas_datasource\"):\n",
+    "    \"\"\"Configure in-memory Pandas datasource.\"\"\"\n",
+    "    try:\n",
+    "        context.add_datasource(\n",
+    "            name=datasource_name,\n",
+    "            class_name=\"Datasource\",\n",
+    "            execution_engine={\"class_name\": \"PandasExecutionEngine\"},\n",
+    "            data_connectors={\n",
+    "                \"default_runtime_data_connector_name\": {\n",
+    "                    \"class_name\": \"RuntimeDataConnector\",\n",
+    "                    \"batch_identifiers\": [\"default_identifier_name\"],\n",
+    "                }\n",
+    "            },\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error adding datasource: {e}\")\n",
     "\n",
-    "# Step 4: Create Expectation Suite\n",
-    "suite_name = \"completeness_suite\"\n",
-    "context.add_or_update_expectation_suite(expectation_suite_name=suite_name)\n",
+    "def create_expectation_suite(context, suite_name=\"completeness_suite\"):\n",
+    "    \"\"\"Create or update an expectation suite.\"\"\"\n",
+    "    try:\n",
+    "        context.add_or_update_expectation_suite(expectation_suite_name=suite_name)\n",
+    "        return suite_name\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error creating expectation suite: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Step 5: Create batch request\n",
-    "batch_request = BatchRequest(\n",
-    "    datasource_name=datasource_name,\n",
-    "    data_connector_name=\"default_runtime_data_connector_name\",\n",
-    "    data_asset_name=\"healthcare_data\",\n",
-    "    runtime_parameters={\"batch_data\": df},\n",
-    "    batch_identifiers={\"default_identifier_name\": \"default_id\"},\n",
-    ")\n",
+    "def validate_data(context, suite_name, data):\n",
+    "    \"\"\"Run completeness validation on provided data.\"\"\"\n",
+    "    try:\n",
+    "        batch_request = BatchRequest(\n",
+    "            datasource_name=\"pandas_datasource\",\n",
+    "            data_connector_name=\"default_runtime_data_connector_name\",\n",
+    "            data_asset_name=\"healthcare_data\",\n",
+    "            runtime_parameters={\"batch_data\": data},\n",
+    "            batch_identifiers={\"default_identifier_name\": \"default_id\"},\n",
+    "        )\n",
     "\n",
-    "# Step 6: Get validator and add expectations\n",
-    "validator = context.get_validator(\n",
-    "    batch_request=batch_request,\n",
-    "    expectation_suite_name=suite_name,\n",
-    ")\n",
+    "        validator = context.get_validator(\n",
+    "            batch_request=batch_request,\n",
+    "            expectation_suite_name=suite_name,\n",
+    "        )\n",
     "\n",
-    "# Add completeness (non-null) expectations\n",
-    "validator.expect_column_values_to_not_be_null(\"patient_id\")\n",
-    "validator.expect_column_values_to_not_be_null(\"age\")\n",
-    "validator.expect_column_values_to_not_be_null(\"cholesterol\")\n",
-    "validator.expect_column_values_to_not_be_null(\"diagnosis\")\n",
+    "        # Add expectations\n",
+    "        for col in data.columns:\n",
+    "            validator.expect_column_values_to_not_be_null(col)\n",
     "\n",
-    "# Save the suite with added expectations\n",
-    "validator.save_expectation_suite(discard_failed_expectations=False)\n",
+    "        validator.save_expectation_suite(discard_failed_expectations=False)\n",
     "\n",
-    "# Step 7: Run validation\n",
-    "results = context.run_validation_operator(\n",
-    "    \"action_list_operator\", assets_to_validate=[validator]\n",
-    ")\n",
+    "        # Run validations\n",
+    "        results = context.run_validation_operator(\n",
+    "            \"action_list_operator\", assets_to_validate=[validator]\n",
+    "        )\n",
     "\n",
-    "# Display results\n",
-    "import json\n",
-    "print(json.dumps(results[\"run_results\"], indent=2, default=str))\n"
+    "        return results\n",
+    "    except Exception as e:\n",
+    "        print(f\"Validation error: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def main():\n",
+    "    data = load_sample_data()\n",
+    "    context = setup_context()\n",
+    "    if context:\n",
+    "        add_datasource(context)\n",
+    "        suite_name = create_expectation_suite(context)\n",
+    "        if suite_name:\n",
+    "            results = validate_data(context, suite_name, data)\n",
+    "            if results:\n",
+    "                import json\n",
+    "                print(json.dumps(results[\"run_results\"], indent=2, default=str))\n",
+    "            else:\n",
+    "                print(\"Validation failed.\")\n",
+    "        else:\n",
+    "            print(\"Failed to create expectation suite.\")\n",
+    "    else:\n",
+    "        print(\"Failed to initialize Great Expectations context.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestExpectations(unittest.TestCase):\n",
+    "    def test_all_columns_present(self):\n",
+    "        df = load_sample_data()\n",
+    "        self.assertIn(\"patient_id\", df.columns)\n",
+    "        self.assertIn(\"age\", df.columns)\n",
+    "\n",
+    "    def test_null_values(self):\n",
+    "        df = load_sample_data()\n",
+    "        self.assertTrue(df[\"age\"].isnull().any())\n",
+    "        self.assertTrue(df[\"diagnosis\"].isnull().any())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    unittest.main(argv=[''], verbosity=2, exit=False)\n"
    ]
   }
  ],
