--- a/src/Module 10/Best Practices & Industry Case Studies/Ques_6.ipynb
+++ b/src/Module 10/Best Practices & Industry Case Studies/Ques_6.ipynb
@@ -193,23 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[31m2025/05/28 15:40:14 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
+      "INFO:root:✅ Data integrity test passed.\n"
      ]
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Run ID: ecebfa1f7fda46ed943b0b749a601d95\n",
-      "Metrics logged:\n",
-      "Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000\n"
+      "INFO:root:✅ Model training test passed.\n",
+      "\u001b[31m2025/05/28 15:42:22 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n",
+      "INFO:root:Run complete. Accuracy: 1.000, Precision: 1.000, Recall: 1.000\n"
      ]
     }
    ],
@@ -217,55 +217,79 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import logging\n",
     "\n",
-    "# Step 1: Load sample data\n",
+    "# Setup logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "# Step 1: Data Loading and Validation\n",
     "def load_data():\n",
     "    data = pd.DataFrame({\n",
     "        'age': [25, 45, 35, 50, 23, 30, 44, 37, 29, 41],\n",
     "        'cholesterol': [180, 220, 190, 210, 170, 200, 230, 210, 185, 195],\n",
     "        'diagnosis': [0, 1, 0, 1, 0, 0, 1, 1, 0, 1]\n",
     "    })\n",
-    "    X = data[['age', 'cholesterol']]\n",
-    "    y = data['diagnosis']\n",
-    "    return train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    assert not data.isnull().any().any(), \"Missing values found in dataset\"\n",
+    "    assert (data[['age', 'cholesterol']] >= 0).all().all(), \"Negative values in input features\"\n",
+    "    return train_test_split(data[['age', 'cholesterol']], data['diagnosis'], test_size=0.2, random_state=42)\n",
     "\n",
-    "# Step 2: Configure MLflow tracking URI (optional)\n",
-    "# mlflow.set_tracking_uri(\"http://localhost:5000\")  # for remote server\n",
-    "\n",
-    "# Step 3–5: Train model and track with MLflow\n",
-    "def train_and_log():\n",
-    "    X_train, X_test, y_train, y_test = load_data()\n",
-    "\n",
+    "# Step 2: Train Model and Log to MLflow\n",
+    "def train_and_log_model(X_train, X_test, y_train, y_test):\n",
     "    with mlflow.start_run():\n",
-    "        model = RandomForestClassifier(n_estimators=100, max_depth=3, random_state=42)\n",
+    "        try:\n",
+    "            model = RandomForestClassifier(n_estimators=100, max_depth=3, random_state=42)\n",
+    "            model.fit(X_train, y_train)\n",
+    "\n",
+    "            y_pred = model.predict(X_test)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            prec = precision_score(y_test, y_pred)\n",
+    "            rec = recall_score(y_test, y_pred)\n",
+    "\n",
+    "            # Log parameters and metrics\n",
+    "            mlflow.log_param(\"n_estimators\", 100)\n",
+    "            mlflow.log_param(\"max_depth\", 3)\n",
+    "            mlflow.log_metric(\"accuracy\", acc)\n",
+    "            mlflow.log_metric(\"precision\", prec)\n",
+    "            mlflow.log_metric(\"recall\", rec)\n",
+    "\n",
+    "            mlflow.sklearn.log_model(model, \"model\")\n",
+    "\n",
+    "            logging.info(f\"Run complete. Accuracy: {acc:.3f}, Precision: {prec:.3f}, Recall: {rec:.3f}\")\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Error during training or logging: {e}\")\n",
+    "            raise\n",
+    "\n",
+    "# Step 3: Unit Test Functions\n",
+    "def test_data_integrity():\n",
+    "    try:\n",
+    "        X_train, X_test, y_train, y_test = load_data()\n",
+    "        assert X_train.shape[1] == 2, \"Expected 2 features\"\n",
+    "        assert y_train.nunique() <= 2, \"Target column not binary\"\n",
+    "        logging.info(\"✅ Data integrity test passed.\")\n",
+    "    except AssertionError as e:\n",
+    "        logging.error(f\"❌ Data integrity test failed: {e}\")\n",
+    "\n",
+    "def test_model_training():\n",
+    "    try:\n",
+    "        X_train, X_test, y_train, y_test = load_data()\n",
+    "        model = RandomForestClassifier()\n",
     "        model.fit(X_train, y_train)\n",
-    "\n",
     "        y_pred = model.predict(X_test)\n",
+    "        assert len(y_pred) == len(y_test), \"Prediction length mismatch\"\n",
+    "        logging.info(\"✅ Model training test passed.\")\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"❌ Model training test failed: {e}\")\n",
     "\n",
-    "        # Calculate metrics\n",
-    "        acc = accuracy_score(y_test, y_pred)\n",
-    "        prec = precision_score(y_test, y_pred)\n",
-    "        rec = recall_score(y_test, y_pred)\n",
-    "\n",
-    "        # Step 4: Log parameters and metrics\n",
-    "        mlflow.log_param(\"n_estimators\", 100)\n",
-    "        mlflow.log_param(\"max_depth\", 3)\n",
-    "        mlflow.log_metric(\"accuracy\", acc)\n",
-    "        mlflow.log_metric(\"precision\", prec)\n",
-    "        mlflow.log_metric(\"recall\", rec)\n",
-    "\n",
-    "        # Log the model\n",
-    "        mlflow.sklearn.log_model(model, \"model\")\n",
-    "\n",
-    "        print(\"Run ID:\", mlflow.active_run().info.run_id)\n",
-    "        print(\"Metrics logged:\")\n",
-    "        print(f\"Accuracy: {acc:.4f}, Precision: {prec:.4f}, Recall: {rec:.4f}\")\n",
-    "\n",
+    "# Main Execution\n",
     "if __name__ == \"__main__\":\n",
-    "    train_and_log()\n"
+    "    test_data_integrity()\n",
+    "    test_model_training()\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = load_data()\n",
+    "    train_and_log_model(X_train, X_test, y_train, y_test)\n"
    ]
   }
  ],
