--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_1.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,37 +47,47 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Step 1: Simulate or load dataset\n",
-    "# For demonstration, let's simulate a dataset of 100 days of sales\n",
+    "# Step 1: Simulate or Load dataset\n",
+    "# Simulated example; replace this with actual loading code if needed\n",
     "np.random.seed(0)\n",
     "days = pd.date_range(start=\"2023-01-01\", periods=100)\n",
     "sales = np.random.normal(loc=200, scale=20, size=100)\n",
+    "sales[10] = 300  # Anomaly\n",
+    "sales[50] = 80   # Anomaly\n",
     "\n",
-    "# Introduce some anomalies\n",
-    "sales[10] = 300  # high anomaly\n",
-    "sales[50] = 80   # low anomaly\n",
-    "\n",
-    "# Create DataFrame\n",
     "df = pd.DataFrame({'Date': days, 'Sales': sales})\n",
     "\n",
-    "# Step 2: Calculate Z-score\n",
-    "mean_sales = df['Sales'].mean()\n",
-    "std_sales = df['Sales'].std()\n",
-    "df['Z_score'] = (df['Sales'] - mean_sales) / std_sales\n",
+    "# Step 2: Error handling and validation\n",
+    "try:\n",
+    "    assert 'Sales' in df.columns, \"Error: 'Sales' column missing\"\n",
+    "    assert df['Sales'].dtype == np.float64 or df['Sales'].dtype == np.float32 or np.issubdtype(df['Sales'].dtype, np.number), \\\n",
+    "        \"Error: 'Sales' column must be numeric\"\n",
+    "    assert df['Sales'].notna().all(), \"Error: 'Sales' column contains NaN values\"\n",
+    "    assert df['Sales'].size > 0, \"Error: 'Sales' column is empty\"\n",
+    "    \n",
+    "    # Step 3: Z-score calculation\n",
+    "    mean_sales = df['Sales'].mean()\n",
+    "    std_sales = df['Sales'].std()\n",
+    "    df['Z_score'] = (df['Sales'] - mean_sales) / std_sales\n",
     "\n",
-    "# Step 3: Identify anomalies\n",
-    "df['Anomaly'] = (df['Z_score'] > 3) | (df['Z_score'] < -3)\n",
+    "    # Step 4: Identify anomalies\n",
+    "    df['Anomaly'] = (df['Z_score'] > 3) | (df['Z_score'] < -3)\n",
     "\n",
-    "# Step 4: Visualization\n",
-    "plt.figure(figsize=(14, 6))\n",
-    "plt.plot(df['Date'], df['Sales'], label='Daily Sales')\n",
-    "plt.scatter(df[df['Anomaly']]['Date'], df[df['Anomaly']]['Sales'], color='red', label='Anomalies')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Sales')\n",
-    "plt.title('Daily Sales with Anomalies Highlighted')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n"
+    "    # Step 5: Visualization\n",
+    "    plt.figure(figsize=(14, 6))\n",
+    "    plt.plot(df['Date'], df['Sales'], label='Daily Sales')\n",
+    "    plt.scatter(df[df['Anomaly']]['Date'], df[df['Anomaly']]['Sales'], color='red', label='Anomalies')\n",
+    "    plt.xlabel('Date')\n",
+    "    plt.ylabel('Sales')\n",
+    "    plt.title('Daily Sales with Anomalies Highlighted')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "except AssertionError as e:\n",
+    "    print(e)\n",
+    "except Exception as e:\n",
+    "    print(\"Unexpected error:\", e)\n"
    ]
   }
  ],
