--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_4.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_4.ipynb
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading data...\n",
       "Original Data:\n",
       "       Name             Email Phone\n",
       "0    Alice    alice@mail.com   123\n",
@@ -47,13 +48,19 @@
       "8    Frank    frank@mail.com   987\n",
       "9      Eve      eve@mail.com   654\n",
       "\n",
+      "Preprocessing data...\n",
+      "\n",
+      "Clustering...\n",
+      "\n",
+      "Removing duplicates...\n",
+      "\n",
       "Deduplicated Data:\n",
-      "       Name             Email Phone\n",
-      "0    Alice    alice@mail.com   123\n",
-      "7      Eve      eve@mail.com   654\n",
-      "2  Charlie  charlie@mail.com   789\n",
-      "1      Bob      bob@mail.com   456\n",
-      "8    Frank    frank@mail.com   987\n"
+      "       Name             Email  Phone\n",
+      "0    Alice    alice@mail.com    123\n",
+      "7      Eve      eve@mail.com    654\n",
+      "2  Charlie  charlie@mail.com    789\n",
+      "1      Bob      bob@mail.com    456\n",
+      "8    Frank    frank@mail.com    987\n"
      ]
     }
    ],
@@ -63,66 +70,83 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import pairwise_distances_argmin_min\n",
-    "import random\n",
     "\n",
-    "# Step 1: Simulate sample customer dataset with duplicates\n",
+    "# Simulate sample customer dataset with duplicates\n",
     "def generate_customer_data():\n",
-    "    data = {\n",
+    "    return pd.DataFrame({\n",
     "        'Name': ['Alice', 'Bob', 'Charlie', 'Alice', 'Bob', 'David', 'Charlie', 'Eve', 'Frank', 'Eve'],\n",
     "        'Email': [\n",
     "            'alice@mail.com', 'bob@mail.com', 'charlie@mail.com', 'alice@mail.com',\n",
     "            'bob@mail.com', 'david@mail.com', 'charlie@mail.com', 'eve@mail.com',\n",
     "            'frank@mail.com', 'eve@mail.com'\n",
     "        ],\n",
-    "        'Phone': [\n",
-    "            '123', '456', '789', '123', '456', '321', '789', '654', '987', '654'\n",
-    "        ]\n",
-    "    }\n",
-    "    return pd.DataFrame(data)\n",
+    "        'Phone': ['123', '456', '789', '123', '456', '321', '789', '654', '987', '654']\n",
+    "    })\n",
     "\n",
-    "# Step 2: Preprocess and standardize the data\n",
+    "# Preprocess and standardize data\n",
     "def preprocess_data(df):\n",
-    "    df_numeric = df[['Phone']].astype(float)\n",
-    "    scaler = StandardScaler()\n",
-    "    scaled_data = scaler.fit_transform(df_numeric)\n",
-    "    return scaled_data, scaler\n",
+    "    try:\n",
+    "        if 'Phone' not in df.columns:\n",
+    "            raise KeyError(\"Missing required column: 'Phone'\")\n",
+    "        df['Phone'] = pd.to_numeric(df['Phone'], errors='coerce')\n",
+    "        if df['Phone'].isnull().any():\n",
+    "            raise ValueError(\"Non-numeric or missing phone values detected.\")\n",
+    "        scaled = StandardScaler().fit_transform(df[['Phone']])\n",
+    "        return scaled\n",
+    "    except Exception as e:\n",
+    "        print(f\"Data preprocessing error: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Step 3: Apply K-means clustering\n",
-    "def cluster_data(scaled_data, k=5):\n",
-    "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
-    "    kmeans.fit(scaled_data)\n",
-    "    return kmeans.labels_, kmeans\n",
+    "# K-means clustering\n",
+    "def apply_kmeans(data, n_clusters=5):\n",
+    "    try:\n",
+    "        if data is None or len(data) == 0:\n",
+    "            raise ValueError(\"Empty or invalid input data for clustering.\")\n",
+    "        model = KMeans(n_clusters=n_clusters, random_state=42)\n",
+    "        labels = model.fit_predict(data)\n",
+    "        return labels, model\n",
+    "    except Exception as e:\n",
+    "        print(f\"Clustering error: {e}\")\n",
+    "        return None, None\n",
     "\n",
-    "# Step 4: Identify duplicates within each cluster\n",
-    "def deduplicate(df, labels, scaled_data):\n",
-    "    df['Cluster'] = labels\n",
-    "    unique_records = []\n",
+    "# Deduplication based on clustering\n",
+    "def deduplicate_records(df, data, labels):\n",
+    "    try:\n",
+    "        if labels is None:\n",
+    "            raise ValueError(\"Missing cluster labels for deduplication.\")\n",
+    "        df['Cluster'] = labels\n",
+    "        deduplicated = []\n",
+    "        for cluster_id in np.unique(labels):\n",
+    "            cluster_indices = df[df['Cluster'] == cluster_id].index\n",
+    "            cluster_data = data[cluster_indices]\n",
+    "            closest_idx, _ = pairwise_distances_argmin_min(\n",
+    "                cluster_data,\n",
+    "                [np.mean(cluster_data, axis=0)]\n",
+    "            )\n",
+    "            deduplicated.append(df.loc[cluster_indices[closest_idx[0]]])\n",
+    "        return pd.DataFrame(deduplicated).drop(columns='Cluster')\n",
+    "    except Exception as e:\n",
+    "        print(f\"Deduplication error: {e}\")\n",
+    "        return df\n",
     "\n",
-    "    for cluster in np.unique(labels):\n",
-    "        cluster_indices = df[df['Cluster'] == cluster].index\n",
-    "        cluster_data = scaled_data[cluster_indices]\n",
-    "        closest, _ = pairwise_distances_argmin_min(\n",
-    "            cluster_data,\n",
-    "            [np.mean(cluster_data, axis=0)]\n",
-    "        )\n",
-    "        unique_index = cluster_indices[closest[0]]\n",
-    "        unique_records.append(df.loc[unique_index])\n",
-    "\n",
-    "    dedup_df = pd.DataFrame(unique_records).drop(columns='Cluster')\n",
-    "    return dedup_df\n",
-    "\n",
-    "# -------- Main Function --------\n",
+    "# Main workflow with batch/step handling\n",
     "def main():\n",
+    "    print(\"Loading data...\")\n",
     "    df = generate_customer_data()\n",
     "    print(\"Original Data:\\n\", df)\n",
     "\n",
-    "    scaled_data, scaler = preprocess_data(df)\n",
-    "    labels, kmeans = cluster_data(scaled_data, k=5)\n",
-    "    deduplicated_df = deduplicate(df, labels, scaled_data)\n",
+    "    print(\"\\nPreprocessing data...\")\n",
+    "    scaled_data = preprocess_data(df)\n",
+    "    \n",
+    "    print(\"\\nClustering...\")\n",
+    "    labels, model = apply_kmeans(scaled_data, n_clusters=5)\n",
     "\n",
-    "    print(\"\\nDeduplicated Data:\\n\", deduplicated_df)\n",
+    "    print(\"\\nRemoving duplicates...\")\n",
+    "    dedup_df = deduplicate_records(df, scaled_data, labels)\n",
     "\n",
-    "# Run the full process\n",
+    "    print(\"\\nDeduplicated Data:\\n\", dedup_df)\n",
+    "\n",
+    "# Execute\n",
     "main()\n"
    ]
   }
