--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_6.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_6.ipynb
@@ -24,17 +24,164 @@
    "source": [
     "# write your code from here\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating event registration data...\n",
+      "\n",
+      "Original Data:\n",
+      "           Name                Email  Phone\n",
+      "0  Alice Smith    alice@example.com  12345\n",
+      "1    Bob Jones      bob@example.com  23456\n",
+      "2  Charlie Ray  charlie@example.com  34567\n",
+      "3  Alice Smith    alice@example.com  12345\n",
+      "4    David Lee    david@example.com  45678\n",
+      "5  Charlie Ray  charlie@example.com  34567\n",
+      "6    Eva White      eva@example.com  56789\n",
+      "7   Frank West    frank@example.com  67890\n",
+      "8    Eva White      eva@example.com  56789\n",
+      "9  George King   george@example.com  78901\n",
+      "\n",
+      "Preprocessing data...\n",
+      "\n",
+      "Applying DBSCAN clustering...\n",
+      "\n",
+      "Reviewing cluster assignments...\n",
+      "\n",
+      "Cluster Assignments:\n",
+      "           Name                Email  Phone  Cluster\n",
+      "1    Bob Jones      bob@example.com  23456       -1\n",
+      "4    David Lee    david@example.com  45678       -1\n",
+      "7   Frank West    frank@example.com  67890       -1\n",
+      "9  George King   george@example.com  78901       -1\n",
+      "0  Alice Smith    alice@example.com  12345        0\n",
+      "3  Alice Smith    alice@example.com  12345        0\n",
+      "2  Charlie Ray  charlie@example.com  34567        1\n",
+      "5  Charlie Ray  charlie@example.com  34567        1\n",
+      "6    Eva White      eva@example.com  56789        2\n",
+      "8    Eva White      eva@example.com  56789        2\n",
+      "\n",
+      "Deduplicating records...\n",
+      "\n",
+      "Final Deduplicated Data:\n",
+      "           Name                Email  Phone\n",
+      "0  Alice Smith    alice@example.com  12345\n",
+      "1  Charlie Ray  charlie@example.com  34567\n",
+      "2    Eva White      eva@example.com  56789\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_distances\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Step 1: Simulate event registration dataset with duplicates\n",
+    "def generate_event_data():\n",
+    "    return pd.DataFrame({\n",
+    "        'Name': [\n",
+    "            'Alice Smith', 'Bob Jones', 'Charlie Ray', 'Alice Smith',\n",
+    "            'David Lee', 'Charlie Ray', 'Eva White', 'Frank West',\n",
+    "            'Eva White', 'George King'\n",
+    "        ],\n",
+    "        'Email': [\n",
+    "            'alice@example.com', 'bob@example.com', 'charlie@example.com', 'alice@example.com',\n",
+    "            'david@example.com', 'charlie@example.com', 'eva@example.com', 'frank@example.com',\n",
+    "            'eva@example.com', 'george@example.com'\n",
+    "        ],\n",
+    "        'Phone': ['12345', '23456', '34567', '12345', '45678', '34567', '56789', '67890', '56789', '78901']\n",
+    "    })\n",
+    "\n",
+    "# Step 2: Preprocess text using TF-IDF + normalize numerical\n",
+    "def preprocess_data(df):\n",
+    "    try:\n",
+    "        vectorizer = TfidfVectorizer()\n",
+    "        text_features = vectorizer.fit_transform(df['Name'] + \" \" + df['Email'])\n",
+    "        numeric_features = StandardScaler().fit_transform(df[['Phone']].astype(float))\n",
+    "        combined = np.hstack((text_features.toarray(), numeric_features))\n",
+    "        return df.copy().reset_index(drop=True), combined\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"Preprocessing failed: {e}\")\n",
+    "\n",
+    "# Step 3: Apply DBSCAN\n",
+    "def perform_dbscan(data, eps=0.5, min_samples=2):\n",
+    "    try:\n",
+    "        model = DBSCAN(eps=eps, min_samples=min_samples, metric='euclidean')\n",
+    "        labels = model.fit_predict(data)\n",
+    "        return labels\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"DBSCAN clustering failed: {e}\")\n",
+    "\n",
+    "# Step 4: Deduplicate data based on DBSCAN clusters\n",
+    "def deduplicate_by_cluster(df, labels):\n",
+    "    try:\n",
+    "        df['Cluster'] = labels\n",
+    "        deduped = df[df['Cluster'] != -1]  # Keep clustered points only\n",
+    "        deduped_cleaned = deduped.groupby('Cluster').first().reset_index()\n",
+    "        return deduped_cleaned.drop(columns=['Cluster'])\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"Deduplication failed: {e}\")\n",
+    "\n",
+    "# Optional: Show cluster assignment for debugging\n",
+    "def show_cluster_info(df, labels):\n",
+    "    df['Cluster'] = labels\n",
+    "    print(\"\\nCluster Assignments:\\n\", df.sort_values(by='Cluster'))\n",
+    "\n",
+    "# Main workflow\n",
+    "def main():\n",
+    "    print(\"Generating event registration data...\\n\")\n",
+    "    df = generate_event_data()\n",
+    "    print(\"Original Data:\\n\", df)\n",
+    "\n",
+    "    print(\"\\nPreprocessing data...\")\n",
+    "    df_clean, processed_data = preprocess_data(df)\n",
+    "\n",
+    "    print(\"\\nApplying DBSCAN clustering...\")\n",
+    "    labels = perform_dbscan(processed_data, eps=0.7, min_samples=2)\n",
+    "\n",
+    "    print(\"\\nReviewing cluster assignments...\")\n",
+    "    show_cluster_info(df_clean, labels)\n",
+    "\n",
+    "    print(\"\\nDeduplicating records...\")\n",
+    "    deduped_df = deduplicate_by_cluster(df_clean, labels)\n",
+    "\n",
+    "    print(\"\\nFinal Deduplicated Data:\\n\", deduped_df)\n",
+    "\n",
+    "# Run\n",
+    "main()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
